--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -16,7 +16,8 @@
     "@modelcontextprotocol/sdk": "^1.0.0",
     "hono": "^4.6.0",
     "tsyringe": "^4.8.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
